--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,81 @@
-.about{
+body{
+    background-color: #e1efd9;
+}
 
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #157241;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-family: "Georgia", serif;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+  background-color: #ad3838;
+}
+
+
+
+.about{
+  font-family: "Georgia", serif;
 }
 
 .work{
-
+  font-family: "Georgia", serif;
 }
+
+
+
+.grid-container {
+    display: grid;
+    grid-template-columns: 250px 250px 250px;
+    background-color: #157241;
+    padding: 10px;
+    width: 800px;
+    height: 100px;
+    justify-content: space-between;
+  }
+.grid-item {
+    background-color: #fffaf5;
+    border: 1px solid #157241;
+    padding: 20px;
+    font-size: 20px;
+    text-align: center;
+    justify-content: space-between;
+    font-family: "Georgia", serif;
+  }
+
+  
+  .grid-item:hover {
+    background-color: #fffaf5;
+    width: 250px;
+    height: 70px;
+    text-align: center;
+    justify-content: space-between;
+  }
 
 .contact{
-    
+  font-family: "Georgia", serif;
 }
+
+
+
+.textbox{
+    height: 100px;
+    width: 400px;
+    }
