--- a/styles.css
+++ b/styles.css
@@ -129,6 +129,7 @@ li a:hover {
   font-family: "Georgia", serif;
   padding-top: 75px;
   line-height: 25px;
+  padding-bottom: 50px;
 }
 
 
@@ -136,7 +137,7 @@ li a:hover {
 .textbox{
     height: 100px;
     width: 400px;
-    }
+  }
 
 
 .footer{
@@ -146,4 +147,5 @@ li a:hover {
   background-color: #157241;
   color: white;
   text-align: center;
+  padding-bottom: 20px;
 }
